Unsupervised Learning - Project.ipynb

--- a/Unsupervised Learning - Project.ipynb
+++ b/Unsupervised Learning - Project.ipynb
@@ -1215,7 +1215,7 @@
     "    \n",
     "3. Key insights from PCA: The first principal component is heavily weighted by spending on Milk, Grocery and Detergent_Paper, implying that these are correlated and contribute significantly to customer variance. \n",
     "\n",
-    "4. Based on our findings from clustering, we can suggest strategies like tailoring specific mar"
+    "4. Based on our findings from clustering, we can suggest strategies like tailoring specific marketing strategies for each customer segmentation to boost sales in various product categories."
    ]
   }
  ],
